# krello

./: .editorconfig  Cargo.toml  README.md  main
docs/: pre-requisites.md
src/: command_parser.rs  generic.rs  json_shearer.rs  main.rs  parser.rs  search.rs  trello_client.rs  trello_wrapper.rs
src/parser/: cards.rs  search.rs
src/search/: parser.rs  trello_wrapper.rs
