[package]

name = "krello"
version = "0.0.1"
authors = ["Djoe Pramono"]

edition = "2018"
[dependencies]
# version 3 is not stable, and cannot have multiple arguments due to bug where it check uniqueness by name instead of id
clap = "2.33.1"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
error-chain = "0.12.2"
serde_json = "1.0"
serde = { version = "1.0.115", features = ["derive"] }
